--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title></title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-??????????????.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-????????????.html">
 <meta name="description" content="">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -228,8 +228,8 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
-title="Driveway pressure washing in ??????????  village  ???????????????">
-professional driveway pressure washing services in ?????????????????   village ????????????????? FAQS</a></p>
+title="Driveway pressure washing in ???????????">
+professional driveway pressure washing services in ??????????? Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-driveway.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -248,8 +248,8 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
-title="Patio and paving  pressure cleaning in ???????????????      ????????????????">
-professional patio pressure washing services ??????????????      ???????????? FAQS</a></p>
+title="Patio and paving  pressure cleaning in ?????????????">
+professional patio pressure washing services ????????????? Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-patios.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
