--- a/local/pressure-washing-cadeby.html
+++ b/local/pressure-washing-cadeby.html
@@ -6,10 +6,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title></title>
+<title>Driveway Pressure Washing Owston Doncaster (Instant online quote)</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-????????????.html">
-<meta name="description" content="">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-cadeby.html">
+<meta name="description" content="Professional pressure washing in Owston Doncaster for driveways, patios, walls, decking, and fencing. Local, insured, and reliable service. Get your instant online quote today and restore your property fast.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
@@ -228,8 +228,8 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
-title="Driveway pressure washing in ???????????">
-professional driveway pressure washing services in ??????????? Doncaster FAQS</a></p>
+title="Driveway pressure washing in Cadeby">
+professional driveway pressure washing services in Cadeby Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-driveway.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -248,8 +248,8 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
-title="Patio and paving  pressure cleaning in ?????????????">
-professional patio pressure washing services ????????????? Doncaster FAQS</a></p>
+title="Patio and paving  pressure cleaning in Cadeby">
+professional patio pressure washing services Cadeby Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-patios.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -328,7 +328,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-??????????????????????????????.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-cadeby.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -341,10 +341,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5352,???????????????????????
-"longitude": -1.0522?????????????????????
+"latitude": 53.8706,
+"longitude": -1.2002
 },
-"areaServed": "????????????????????????????????????",
+"areaServed": "Cadeby",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
